Fix for "Tasks screen. Edit event. OK & Cancel buttons on time edit popup have white font color and are almost invisible."
git-svn-id: http://svn-new/TeamDev/OpenFaces/trunk@334 7826287f-d7cb-499f-91f0-9f45672cc948

--- a/compatibilityDemo/WebContent/css/style.css
+++ b/compatibilityDemo/WebContent/css/style.css
@@ -48,5 +48,4 @@ a img{
 .relative{	position:relative; }
 .thin{	font-weight:normal; }
 
-
-table.rich-calendar-popup td {color:black;}
+.EditableRow{color:black !important;}
